--- a/Projects in Frontend/Personal Portfolio – CSS Styling Project/homepage.html
+++ b/Projects in Frontend/Personal Portfolio – CSS Styling Project/homepage.html
@@ -18,8 +18,10 @@
     <meta name="twitter:title" content="Joaquim Costa's Personal Portfolio">
     <meta name="twitter:description" content="Explore my projects and skills in web development.">
     <meta name="twitter:image" content="portfolio-preview.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <main>
     <header>
         <a href="./homepage.html" class="logo">Joaquim Costa</a>
         <nav>
@@ -32,17 +34,34 @@
             </ul>
         </nav>
     </header>
-
     <section id="home" class="hero">
         <div class="home-content">
         <h1>Frontend Developer</h1>
-        <p>Welcome to my personal portfolio! Explore my projects and skills in web development.</p>
-        </div>
+        <p>Welcome to my personal portfolio! Explore my projects, article and skills in web development.</p>
         
         <div class="social-links">
             <a href="downloads/Joaquim_Costa_Resume.pdf" download>Download Resume</a>
         </div>
-    </section>
 
+         <div class="social-links">
+            <a href="https://github.com/JoaquimCosta" target="_blank" aria-label="GitHub">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/joaquim-costa-123456789/" target="_blank" aria-label="LinkedIn">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://twitter.com/joaquimcosta" target="_blank" aria-label="Twitter">
+                <i class="fab fa-twitter"></i>
+            </a>
+        </div>
+        </div>
+    </section>
+     <footer>
+        <div class="footer-separator">
+        <p>&copy; 2024 Joaquim Costa. All rights reserved.</p>
+        <a href="#home" class="back-to-top">Back to Top</a>
+        </div>
+    </footer>
+        </main>
 </body>
 </html>
