update cover hover

--- a/Projects in Frontend/Personal Portfolio – CSS Styling Project/homepage.html
+++ b/Projects in Frontend/Personal Portfolio – CSS Styling Project/homepage.html
@@ -39,7 +39,7 @@
         <h1>Frontend Developer</h1>
         <p>Welcome to my personal portfolio! Explore my projects, article and skills in web development.</p>
         
-        <div class="social-links">
+        <div class="social-links-resume">
             <a href="downloads/Joaquim_Costa_Resume.pdf" download>Download Resume</a>
         </div>
 
