--- a/Projects in Frontend/Personal Portfolio – CSS Styling Project/projects.html
+++ b/Projects in Frontend/Personal Portfolio – CSS Styling Project/projects.html
@@ -20,25 +20,33 @@
         </nav>
     </header>
 
-    <section id="projects" class="projects">
+    <section class="projects">
         <h2>Projects</h2>
-        <div class="project-list">
+        <div class="project-list-grid">
             <div class="project-item">
-                <h3>Project One</h3>
-                <p>A brief description of Project One.</p>
+                <img src="https://images.unsplash.com/photo-1519125323398-675f0ddb6308?auto=format&fit=crop&w=400&q=80" alt="Weather App Thumbnail">
+                <h3>Weather App</h3>
+                <p>A responsive web app that shows real-time weather data for any city using OpenWeatherMap API.</p>
                 <a href="#">View Project</a>
             </div>
             <div class="project-item">
-                <h3>Project Two</h3>
-                <p>A brief description of Project Two.</p>
+                <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=400&q=80" alt="Task Manager Thumbnail">
+                <h3>Task Manager</h3>
+                <p>Organize your daily tasks with this intuitive and clean task manager built with HTML, CSS, and JavaScript.</p>
                 <a href="#">View Project</a>
             </div>
             <div class="project-item">
-                <h3>Project Three</h3>
-                <p>A brief description of Project Three.</p>
+                <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80" alt="Portfolio Website Thumbnail">
+                <h3>Portfolio Website</h3>
+                <p>My personal portfolio website showcasing my skills, projects, and contact information.</p>
                 <a href="#">View Project</a>
             </div>
         </div>
     </section>
+    <footer>
+        <div class="footer-separator-container">
+        <p>&copy; 2024 Joaquim Costa. All rights reserved.</p>
+        </div>
+</footer>
 </body>
 </html>
